--- a/app/views/ftf/application/index.html
+++ b/app/views/ftf/application/index.html
@@ -22,22 +22,22 @@
     
     
     <h3 class="govuk-heading-m">1. Application journey</h3>
-    <p class="govuk-body">Test the entire journey + confirmation page</p>
+    <p class="govuk-body">Test the entire journey</p>
 
 
-    <p class="govuk-body"><a href="/ftf/claim/v2-0/index" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
+    <p class="govuk-body"><a href="/ftf/application/v2-0/index" target="_blank">V2.0: Application journey (opens in a new tab)</a></p>
 
     <hr style="margin: 40px 0;">
 
 
-
+<!--
     <h3 class="govuk-heading-m">2. Evidence headers</h3>
     <p class="govuk-body">Select the preferred headers</p>
 
     <p class="govuk-body"><a href="/ftf/claim/v2-0/upload2#evidence" target="_blank">V2.0: Full page: Type (opens in a new tab)</a></p>
     <p class="govuk-body"><a href="/ftf/claim/v2-1/upload2#evidence" target="_blank">V2.1: Full page: Proof (opens in a new tab)</a></p>
     
-
+-->
    
 
 
