--- a/app/views/ftf/application/v2-0/activity1b.html
+++ b/app/views/ftf/application/v2-0/activity1b.html
@@ -135,12 +135,13 @@
 
 
 
-
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                Upload application forms and evidence
+                <a href="upload1.html" aria-describedby="eligibility-status">
+                  Upload application forms and evidence
+                </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="download-claim-form">Cannot start yet</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
 
             <li class="govuk-prototype-kit-task-list__item">
