--- a/app/views/ftf/application/v2-0/download.html
+++ b/app/views/ftf/application/v2-0/download.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-application-round-2.html" %}
 
 {% set pageName="Download claim form" %}
 
@@ -35,9 +35,9 @@
     <!-- <span class="govuk-body-l"> <a href="/public/downloads/ftf/FTF-Claim-Form.pdf" target="_blank">Grant claim form</a>  -->
       <span class="govuk-body-l"> <a href="/public/downloads/ftf/Application form - Water Management grant - FTF.docx" download="Application form - Water Management grant - FTF.docx">Application form: Water Management grant</a>
 
-    <img src="/public/images/FTF_claim_form.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
+    <img src="/public/images/FTF_application_form.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
         <br><br>
-      <p class="govuk-body-s sbi-number">DOCX, 235 KB, 16 pages.</p>
+      <p class="govuk-body-s sbi-number">DOCX, 235 KB, 16 pages</p>
     </span>
 
     <br><br><br>
@@ -48,15 +48,12 @@
 
         <img src="/public/images/FTF_application_appendix.png" alt="Small screenshot showing page one of the grant funding agreement." class="download-thumbnail">
             <br><br>
-          <p class="govuk-body-s sbi-number">XLSX, 204 KB, 6 pages.</p>
+          <p class="govuk-body-s sbi-number">XLSX, 204 KB, 6 pages</p>
         </span>
 
-
-    
     <br><br><br>
     
     {% include "../../_includes/details-block_request-accessible-format.html" %}
-
 
 
     <hr style="margin: 50px 0;">
@@ -66,13 +63,10 @@
      <br><br>
   
 
-
-
-
     <p class="govuk-body">Before you fill in the full application, read:<br>
       <ul class="govuk-list govuk-list--bullet">
-        <li> <a href="x" target="_blank">Water Management grant round 2 guidance (opens in a new tab)</a></li>
-        <li><a href="x" target="_blank">How to submit a Water Management grant full application (opens in a new tab)</a></li>
+        <li> <a href="/_common/not-testing.html" target="_blank">Water Management grant round 2 guidance (opens in a new tab)</a></li>
+        <li><a href="/_common/not-testing.html" target="_blank">How to submit a Water Management grant full application (opens in a new tab)</a></li>
        </ul>
     </p>
 
@@ -80,58 +74,46 @@
     <p class="govuk-body">When you are ready, you can <a href="/_common/not-testing.html">upload your claim form and evidence</a>  and submit your application.</p>
 
 
-
-
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        Do not upload scanned copies or PDFs of the claim form.
+        Do not upload handwritten and scanned copies or PDFs.
       </strong>
     </div>
 
 
-
-
-
-    <p class="govuk-body">When you are ready, you can <a href="/_common/not-testing.html">upload your claim form and evidence</a>  and submit your application.</p>
-
-
-
-
-
+    <p class="govuk-body">Read more on <a href="/_common/not-testing.html">how to fill in a grant application form (opens in a new tab)</a>.</p>
 
 
       <hr style="margin: 50px 0;">
 
-      <h3 class="govuk-heading-m">Evidence you need to make a claim</h3>
-         <br>
-        <p class="govuk-body">To make a claim, you must provide evidence that each item you are claiming for:<br>
+      <h3 class="govuk-heading-m">Evidence you need to apply</h3>
+         <p class="govuk-body">You should <a href="/_common/not-testing.html">check the Water Management grant manual (opens in a new tab) </a>to confirm what evidence you need to provide.</p>
+         <p class="govuk-body">Evidence could include:<br>
           <ul class="govuk-list govuk-list--bullet">
-            <li>has been purchased (for example, invoices)</li>
-            <li>has been paid for in full (for example, receipts and bank statements)</li>
-            <li>is in place and operational (for example, photos, videos)</li>
+            <li>financial accounts</li>
+            <li>linked businesses and their accounts</li>
+            <li>licences and permissions</li>
+            <li>project funding</li>
+            <li>quotes and tenders</li>
+            <li>VAT exemption</li>
+            <li>plans and drawings</li>
+            <li>third-party agreements</li>
+            <li>letters of support</li>
           </ul>
         </p>
     
-        <p><a class="govuk-link" href="/_common/not-testing.html" target="_blank">Check guidance on how to make a claim (opens in a new tab)</a></p>
+<br><br>
 
 
-<br>
-
-
-      <a href="activity1b">
+      <a href="activity1b?02-01=complete">
         <button class="govuk-button">
           Continue
         </button>
       </a>
 
-
-
-
     {% include "../../_includes/details-block_claim-questions-contact.html" %}
-
-
 
 </main>
 
