--- a/app/views/ftf/application/v2-0/financial/financial1.html
+++ b/app/views/ftf/application/v2-0/financial/financial1.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-application-round-2.html" %}
 
 {% set pageName="Upload 1" %}
 
@@ -26,35 +26,80 @@
 
 
     <span class="govuk-caption-xl">Upload evidence</span>
-    <h1 class="govuk-heading-xl">Proof items have been purchased</h1>
-    <h2 class="govuk-body" style="margin-top: -20px;">For example, invoices</h2>
+    <h1 class="govuk-heading-xl">Financial accounts</h1>
+    <h2 class="govuk-body" style="margin-top: -20px;">Upload full financial accounts to cover the last 3 years.</h2>
   
-    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
+
+
+
+
+
+
+
+    <p class="govuk-body">The accounts must include:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>business turnover</li>
+        <li>balance sheet total (the total of all assets)</li>
+        <li>the financial year end date</li>
+      </ul>
+    </p>
+
+
+
+    <hr style="margin: 50px 0;">
+
+
+    <h1 class="govuk-heading-l">Evidence</h1>
+
+
+
+
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
+        Do not password protect files.
       </strong>
     </div>
 
-   
-<div style="width: 630px; height: 202px; position: relative">
-  <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-  <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-  <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
+  
+    
 
-    <a href="purchased2.html">
-      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-        Choose file
-      </button>
-    </a>
+
+
+
+
+
+
+    <div class="govuk-form-group">
+      <label class="govuk-label" for="file-upload-1">
+        <strong>Upload a file</strong>
+      </label>
+
+      <input class="govuk-file-upload" id="file-upload-1" name="fileUpload1" type="file" onclick="redirectToPage()">
+     
+     <script>
+        function redirectToPage() {
+          // Get the URL of the page you want to navigate to
+          const nextPageURL = 'financial2';
+      
+          // Redirect to the next page
+          window.location.href = nextPageURL;
+        }
+      </script>
+    </div>
+
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Upload file
+    </button>
+
+
 
 </main>
 
-<br>
+
 <button class="govuk-button" data-module="govuk-button">
   Continue
 </button>
