--- a/app/views/ftf/application/v2-0/form/form1.html
+++ b/app/views/ftf/application/v2-0/form/form1.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-application-round-2.html" %}
 
 {% set pageName="Form1" %}
 
@@ -71,6 +71,9 @@
 
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
+
+
+
 <h2 class="govuk-heading-l">2. Appendix</h2>
     <p class="govuk-body" style="color: #505A5F;">Supported file types are XLS or XLSX. Maximum file size is 20MB.</p>
 
@@ -106,10 +109,11 @@
 
 <br><br><br>
  
-<button class="govuk-button" data-module="govuk-button">
-  Continue
-</button>
-    </a>
+<a href="/ftf/application/v2-0/upload1?01=ready">
+  <button class="govuk-button" data-module="govuk-button">
+    Continue
+  </button>
+</a>
 
 
 
