--- a/app/views/ftf/application/v2-0/form/form5.html
+++ b/app/views/ftf/application/v2-0/form/form5.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-application-round-2.html" %}
 
 {% set pageName="Form2" %}
 
@@ -47,12 +47,12 @@
     <div style="width: 630px; height: 111px; position: relative">
       <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
       <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application - Water management FTF.docx , 100KB</div>
+        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application form - Water Management grant - FTF.docx , 235KB</div>
         <div style="width: 102px; left: 530px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
       </div>
     </div>
 
-
+<br><br>
 
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
 <br><br>
@@ -63,7 +63,7 @@
     <div style="width: 630px; height: 111px; position: relative">
       <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
       <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Appendix - Water management FTF.xls , 100KB</div>
+        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application appendix - Water Management grant - FTF.xls , 209KB</div>
         <div style="width: 102px; left: 530px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
       </div>
     </div>
@@ -73,13 +73,12 @@
 
 <br><br><br>
  
-<a href="/ftf/application/v2-0/up?02=complete">
+<a href="/ftf/application/v2-0/upload1?01=complete">
   <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
 </a>
     
-
 
 
 
