--- a/app/views/ftf/application/v2-0/form/uploadx.html
+++ b/app/views/ftf/application/v2-0/form/uploadx.html
@@ -235,7 +235,7 @@
         </button>
       </a>
 
-  {% include "../../_includes/details-block_application-questions-contact.html" %}
+  {% include "../../../_includes/details-block_application-questions-contact.html" %}
 
   <br><br><br>
 
