--- a/app/views/ftf/application/v2-0/financial/financial2.html
+++ b/app/views/ftf/application/v2-0/financial/financial2.html
@@ -26,18 +26,41 @@
 
 
     <span class="govuk-caption-xl">Upload evidence</span>
-    <h1 class="govuk-heading-xl">Proof items have been purchased</h1>
-    <h2 class="govuk-body" style="margin-top: -20px;">For example, invoices</h2>
+    <h1 class="govuk-heading-xl">Financial accounts</h1>
+    <h2 class="govuk-body" style="margin-top: -20px;">Upload full financial accounts to cover the last 3 years.</h2>
   
-    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, MP4 or JPG. Maximum file size is 20MB.</p>
 
 
+
+
+
+
+
+    <p class="govuk-body">The accounts must include:<br>
+      <ul class="govuk-list govuk-list--bullet">
+        <li>business turnover</li>
+        <li>balance sheet total (the total of all assets)</li>
+        <li>the financial year end date</li>
+      </ul>
+    </p>
+
+
+
+    <hr style="margin: 50px 0;">
+
+
+    <h1 class="govuk-heading-l">Evidence</h1>
+
+
+
+
+    <p class="govuk-body" style="color: #505A5F;">Supported file types are PDF, DOC, DOCX, XLS, XLSX or JPG. Maximum file size is 20MB.</p>
 
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
         <span class="govuk-warning-text__assistive">Warning</span>
-        You must add evidence for each item you are claiming for.
+        Do not password protect files.
       </strong>
     </div>
 
@@ -46,49 +69,40 @@
 
 
 
-<br>
-
-    <div style="width: 630px; height: 321px; position: relative">
-      <div style="width: 367.50px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Files added</div>
-      <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pipe - invoice.pdf , 3MB</div>
-        <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
+    <div style="width: 397px; height: 68px; position: relative">
+      <div style="width: 107px; height: 31px; left: 0px; top: 37px; position: absolute">
+        <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
+        <div style="width: 105px; height: 24px; left: 1px; top: 6px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
       </div>
-      <div style="width: 630px; height: 50px; left: 0px; top: 201px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir seal - invoice.pdf , 3MB</div>
-        <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
-      </div>
-      <div style="width: 630px; height: 50px; left: 0px; top: 131px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir pump - invoice.pdf , 3MB</div>
-        <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
-      </div>
-      <div style="width: 630px; height: 50px; left: 0px; top: 271px; position: absolute">
-        <div style="width: 421.03px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Reservoir clips - invoice.pdf , 3MB</div>
-        <div style="width: 105px; left: 525px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
-        <div style="width: 630px; height: 1px; left: 0px; top: 49px; position: absolute; background: #B1B4B6"></div>
-      </div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">4 files</div>
+      <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
-
 
     <br><br>
 
-   
-<div style="width: 630px; height: 202px; position: relative">
-  <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
-  <div style="width: 224px; left: 18px; top: 107px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Drag and drop files here or</div>
-  <div style="width: 630px; height: 164px; left: 0px; top: 38px; position: absolute; border: 3px black dotted"></div>
-  <div style="width: 120px; height: 40px; padding-top: 30px; padding-bottom: 6px; left: 240px; top: 102px; position: absolute; background: #ffffff; justify-content: center; align-items: center; gap: 10px; display: inline-flex">
 
-  <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-      Choose file
-    </button>
+    <a href="financial3">
+      <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+        Upload file
+      </button>
+    </a>
+
+
+
+
+
+
+
+
+
+
+
+ 
 
 </main>
 
 <br>
+
 <a href="upload3#evidence.html">
   <button class="govuk-button">
     Continue
