--- a/app/views/ftf/application/v2-0/form/form4.html
+++ b/app/views/ftf/application/v2-0/form/form4.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-claim-round-2.html" %}
+{% extends "layouts/main-application-round-2.html" %}
 
 {% set pageName="Form2" %}
 
@@ -47,11 +47,12 @@
     <div style="width: 630px; height: 111px; position: relative">
       <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
       <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application - Water management FTF.docx , 100KB</div>
+        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application form - Water Management grant - FTF.docx , 235KB</div>
         <div style="width: 102px; left: 530px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
       </div>
     </div>
 
+    <br><br>
 
 
     <div style="width: 630px; height: 0px; border: 0.5px #B1B4B6 solid"></div>
@@ -60,59 +61,39 @@
     <p class="govuk-body" style="color: #505A5F;">Supported file types are XLS or XLSX. Maximum file size is 20MB.</p>
 
 
-    <div style="width: 630px; height: 111px; position: relative">
-      <div style="width: 357px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">File uploaded</div>
-      <div style="width: 630px; height: 50px; left: 0px; top: 61px; position: absolute">
-        <div style="width: 468px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Appendix - Water management FTF.xls , 100KB</div>
-        <div style="width: 102px; left: 530px; top: 0px; position: absolute; text-align: right; color: #1D70B8; font-size: 19px; font-family: Arial, Helvetica; font-weight: 300; text-decoration: underline; line-height: 30px; word-wrap: break-word">Delete file</div>
+
+    <div class="govuk-form-group">
+     
+     
+     
+     
+      <div style="width: 397px; height: 68px; position: relative">
+        <div style="width: 107px; height: 31px; left: 0px; top: 37px; position: absolute">
+          <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
+          <div style="width: 105px; height: 24px; left: 1px; top: 6px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
+        </div>
+        <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">Application appendix - Wat..FTF.xls</div>
+        <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
       </div>
-    </div>
+  
+  <br><br>
+  
+  <a href="form5">
+    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+      Upload file
+    </button>
+  </a>
+
 
 
 
 
 <br><br><br>
  
-<a href="/ftf/application/v2-0/up?01=progress">
-  <button class="govuk-button" data-module="govuk-button">
-    Continue
-  </button>
-</a>
-    
-
-
-
-
-
-
-
-<!-- Button to change tag state on Page 1 -->
-<button onclick="changeTagStateOnPage1(1)">Change Task 1 State on Page 1</button>
-
-<!-- Include JavaScript here -->
-<script>
-    // Function to change tag state on Page 1
-    function changeTagStateOnPage1(taskNumber) {
-        // Define the new state you want to set
-        const newState = "Completed"; // Change this as needed
-
-        // Construct the URL for Page 1 with the task number as a parameter
-        const url = `/ftf/application/v2-0/up.html?task=${taskNumber}&state=${newState}`;
-        
-        // Redirect the user to Page 1 with the parameter
-        window.location.href = url;
-    }
-</script>
-
-
-
-
-
-
-
-
-
-
+<button class="govuk-button" data-module="govuk-button">
+  Continue
+</button>
+    </a>
 
 
 
