--- a/app/views/ftf/application/index.html
+++ b/app/views/ftf/application/index.html
@@ -12,7 +12,7 @@
 
     <span class="govuk-caption-xl">October 2023</span>
     <h1 class="govuk-heading-xl">
-      Claim
+      Application
     </h1>
 
     <h2 class="govuk-heading-l">FTF Application Prototypes</h2>
