--- a/app/views/ftf/application/v2-0/financial/financial1a.html
+++ b/app/views/ftf/application/v2-0/financial/financial1a.html
@@ -83,7 +83,7 @@
      <script>
         function redirectToPage() {
           // Get the URL of the page you want to navigate to
-          const nextPageURL = 'financial2';
+          const nextPageURL = 'financial2a';
       
           // Redirect to the next page
           window.location.href = nextPageURL;
@@ -100,9 +100,12 @@
 </main>
 
 
-<button class="govuk-button" data-module="govuk-button">
-  Continue
-</button>
+<a href="upload2?02=ready">
+  <button class="govuk-button" data-module="govuk-button">
+    Continue
+  </button>
+</a>
+    
 
 
 
