--- a/app/views/ftf/application/v2-0/financial/financial2a.html
+++ b/app/views/ftf/application/v2-0/financial/financial2a.html
@@ -74,14 +74,14 @@
         <div style="width: 107px; height: 31px; left: 0px; top: 0px; position: absolute; background: #F3F2F1; border-radius: 2px; border: 1px #8D8C8A solid"></div>
         <div style="width: 105px; height: 24px; left: 1px; top: 6px; position: absolute; text-align: center; color: black; font-size: 18px; font-family: Arial; font-weight: 400; line-height: 20px; word-wrap: break-word">Choose file</div>
       </div>
-      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">4 files</div>
+      <div style="width: 285px; height: 25px; left: 112px; top: 39px; position: absolute; color: black; font-size: 18px; font-family: Arial, Helvetica; font-weight: 300; line-height: 30px; word-wrap: break-word">3 files</div>
       <div style="width: 192px; height: 25px; left: 0px; top: 0px; position: absolute; color: black; font-size: 19px; font-family: Arial, Helvetica; font-weight: 700; line-height: 30px; word-wrap: break-word">Upload a file</div>
     </div>
 
     <br><br>
 
 
-    <a href="financial3">
+    <a href="financial3a">
       <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
         Upload file
       </button>
@@ -90,21 +90,12 @@
 
 
 
-
-
-
-
-
-
-
- 
-
 </main>
 
 <br>
 
-<a href="upload3#evidence.html">
-  <button class="govuk-button">
+<a href="upload2?02=ready">
+  <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
 </a>
