--- a/app/views/ftf/application/v2-0/form/form5.html
+++ b/app/views/ftf/application/v2-0/form/form5.html
@@ -73,7 +73,7 @@
 
 <br><br><br>
  
-<a href="/ftf/application/v2-0/upload1?01=complete">
+<a href="upload1?01=complete">
   <button class="govuk-button" data-module="govuk-button">
     Continue
   </button>
