--- a/app/views/ftf/application/v2-0/linked/upload3.html
+++ b/app/views/ftf/application/v2-0/linked/upload3.html
@@ -52,65 +52,61 @@
           <ul class="govuk-prototype-kit-task-list__items" style="padding-left: 0;">
 
 
-     
-{% if (data['01'] == "ready") %}
-<li class="govuk-prototype-kit-task-list__item">
-  <span class="govuk-prototype-kit-task-list__task-name">
-    <a href="/ftf/application/v2-0/form/form1.html" aria-describedby="eligibility-status">
-      Application form and appendix
-    </a>
-  </span>
-  <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
-</li>
 
-
-{% elif (data['01'] == "progress") %}
-<li class="govuk-prototype-kit-task-list__item">
-  <span class="govuk-prototype-kit-task-list__task-name">
-    <a href="/ftf/application/v2-0/form/form3.html" aria-describedby="eligibility-status">
-      Application form and appendix
-    </a>
-  </span>
-  <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
-</li>
-
-
-{% elif (data['01'] == "complete") %}
-<li class="govuk-prototype-kit-task-list__item">
-  <span class="govuk-prototype-kit-task-list__task-name">
-    <a href="/ftf/application/v2-0/form/form5.html" aria-describedby="eligibility-status">
-      Application form and appendix
-    </a>
-  </span>
-  <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
-</li>
-
-{% endif %}
-           
-       
-
-
-
-
-
-           
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="/ftf/application/v2-0/financial/financialq.html" aria-describedby="eligibility-status">
-                  Financial accounts
+                <a href="/ftf/application/v2-0/form/form5.html" aria-describedby="eligibility-status">
+                  Application form and appendix
                 </a>
               </span>
-              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
             </li>
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
+                <a href="/ftf/application/v2-0/form/form5.html" aria-describedby="eligibility-status">
+                  Financial accounts
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+
+
+            {% if (data['02'] == "ready") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/ftf/application/v2-0/financial/financial1a.html" aria-describedby="eligibility-status">
                   Linked business accounts
                 </a>
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">Not started</strong>
             </li>
+            
+            
+            {% elif (data['02'] == "progress") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/ftf/application/v2-0/financial/financial3a.html" aria-describedby="eligibility-status">
+                  Linked business accounts
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
+            </li>
+            
+            
+            {% elif (data['02'] == "complete") %}
+            <li class="govuk-prototype-kit-task-list__item">
+              <span class="govuk-prototype-kit-task-list__task-name">
+                <a href="/ftf/application/v2-0/financial/financial3a.html" aria-describedby="eligibility-status">
+                  Linked business accounts
+                </a>
+              </span>
+              <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="list-convictions-status">Completed</strong>
+            </li>
+            
+            {% endif %}
+
+
             
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
